infra/gitops/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-2-b1-prod-deployment
  namespace: group-2-b1-prod
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: workshop-summer-group-2-b1
          image: ghcr.io/kkgo-software-engineering/workshop-summer-group-2-b1:b363bea56839ebd2adf0f1bae2a36726e25ff810
          imagePullPolicy: Always
          livenessProbe:
              httpGet:
                  path: /api/v1/health
                  port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
          readinessProbe:
              httpGet:
                  path: /api/v1/health
                  port: 8080
              initialDelaySeconds: 5
              periodSeconds: 20
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
            requests:
                cpu: "0.25"
                memory: 128Mi
